fix: align text style.css

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-body {
-    min-height: 100vh;
-    scroll-behavior: smooth;
-    text-rendering: optimizeSpeed;
-    line-height: 1.5;
-  }
+.container{
+    color: antiquewhite;
+    font-size: medium;
+    height: auto;
+}
+.center{
+    text-align: center;
+}
